--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link href="css/snake.css" rel="stylesheet" type="text/css"/>
+        <link href="snake.css" rel="stylesheet" type="text/css"/>
         <script type="text/javascript">
             $(document).ready(function () {
                 $(document).keydown(function (xKey) {
@@ -36,7 +36,7 @@ and open the template in the editor.
     <body>
         <div id="can"></div>
         <input id="score" name="score" type="text" value="" disabled/>
-        <script src="js/snake.js" type="text/javascript"></script>
+        <script src="snake.js" type="text/javascript"></script>
         <script type="text/javascript">
 
         </script>
